# PoocleSearchTool

./: README.md  README.txt  codeProgress.txt  e  main.c  makefile  meson.build
GTKProject/: GTKGlade.glade  GTKInterface.c  GTKInterface.h
files/: arquivo1.txt  arquivo10.txt  arquivo11.txt  arquivo12.txt  arquivo13.txt  arquivo14.txt  arquivo2.txt  arquivo3.txt  arquivo4.txt  arquivo5.txt  arquivo6.txt  arquivo7.txt  arquivo8.txt  arquivo9.txt  clean_files.py  entrada.txt  fileManagement.py  file_management.py  pocs.txt
headers/: GTKInterface.h  PATRICIA.h  TF-IDF.h  TF-IDFDocument.h  TF-IDFList.h  TF-IDFWord.h  calculations.h  docList.h  docMath.h  fileManagement.h  include.h  index.h  math.h  patTree.h  poocleMenu.h  searchEngineTasks.h  searchEnigineTasks.h  searchTerm.h  wordle.h
output/: main  main2
sources/: GTKInterface.c  PATRICIA.c  TF-IDF.c  TF-IDFDocument.c  TF-IDFList.c  TF-IDFWord.c  calculations.c  docList.c  docMath.c  fileManagement.c  index.c  math.c  patTree.c  poocleMenu.c  searchEngineTasks.c  searchEnigineTasks.c  searchTerm.c  wordle.c
